# public-procurement-policy-system

./: .env.example  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: DATABASE_DESIGN.md  DATA_MAPPING.md  DATA_SOURCES.md  POLICY_DEFINITION.md  PROJECT_BRIEF.md  REQUIREMENTS.md  SYSTEM_ARCHITECTURE.md
src/: __init__.py
src/procurement/: __init__.py  __main__.py
src/procurement/api/: __init__.py
src/procurement/calculators/: __init__.py
src/procurement/collectors/: __init__.py
src/procurement/core/: __init__.py
src/procurement/core/config/: __init__.py  settings.py
src/procurement/database/: __init__.py
src/procurement/matchers/: __init__.py
src/procurement/models/: __init__.py
tests/: test_config.py  test_package.py
